postgresql-operator/overlays/uid-fixes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-operator
spec:
  template:
    spec:
      containers:
        - name: postgres-operator
          securityContext:
            $patch: delete
